added qoute option along with edit and reply....buttons still not working

--- a/susret/css/main.css
+++ b/susret/css/main.css
@@ -132,7 +132,8 @@ div.view
 {
 	padding: 10px;
 	margin: 10px 0;
-	border: 1px solid #C9E0ED;
+/*	border: 1px solid #C9E0ED;*/
+	border: 1px solid cornflowerblue;
 }
 
 div.breadcrumbs
